# aboboracandy

./: .gitignore  README.md  about.html  feed.xml  imagens.html  index.html  journal.html  links.html  mediaNotas.html  neoHook  nina.html  not_found.html  pixelizer.html  pyproject.toml  serverDist.py  serverSrc.py
js/: clock.js  clock_Index.js  clock_pixelizer.js  dragger.js  handleError.js  imgGen.js  logbox.js  picView.js  preload.js
pixelizer/: gallery.html
posts/: elite_talk.html  sweets-halloween-begginings.html
public/: preloader.js  script.js
src/: 64.txt  about.html  branquinha.html  feed.xml  index.html  journal.html  links.html
src/js/: clock_Index.js  copy.js  imgGen.js  logbox.js
src/posts/: happyNewYuri.html
src/sass/: _styles.scss
src/sass/abstracts/: __abstracts-dir.scss  _variables.scss  fonts.scss
src/sass/base/: __base-dir.scss  _animations.scss  _reset.scss  _typography.scss
src/sass/components/: __components-dir.scss  _crt.scss  _hidden-text.scss
src/sass/layouts/: __layouts-dir.scss
src/sass/pages/: about.scss  gallery.scss  index.scss  journal.scss  journalLegacy.scss  links.scss
src/style/: style.css
src/style/abstracts/: fonts.css
src/style/pages/: about.css  gbye.css  journal.css  journalLegacy.css  links.css  magic.css  soneto.css
style/: _styles.scss  normalize.css  style.css
style/pages/: about.css  gallery.css  index.css  journal.css  links.css  nina.css  not.css  pixelizer.css
style/styles/: about.css  canvas.css  index.css  links.css  not.css
