[project]
name = "aboboracandy"
version = "0.1.0"
description = "my website at neocities"
authors = [
    {name = "dargon",email = "dargondark02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "watchdog (>=6.0.0,<7.0.0)",
    "libsass (>=0.23.0,<0.24.0)"
]

[dependency-groups]
dev = [
    "livereload (>=2.7.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
